[tool.poetry]
name = "geo-distance"
version = "0.1.0"
description = ""
authors = ["Isabela Caceres <isacacerespalma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
