[tool.poetry]
name = "geo-distance"
version = "0.1.0"
description = ""
authors = ["Isabela Caceres <isacacerespalma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.10.0"
uuid = "^1.30"
pysqlite3 = "^0.5.4"
databases = "^0.9.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"